# yolo-grasping-on-ascend

./: .env.example  .gitignore  4类物品分拣系统更新说明.md  ARCHITECTURE.txt  README.md  README_CN.md  SYSTEM_USAGE.txt  UBUNTU_SETUP.txt  debug_check.py  quick_start.bat  run_ubuntu.sh  system_config.py  test_4class_detection.py  test_integration.py  voice_guided_robot_system.py  完整部署指南.txt  项目交付说明.md
mindyolo-master/: .recognize_mic.py.swp  export.py  export_model.py  predict_1.py  requirements.txt
mindyolo-master/demo/: LLM意图识别.py  main.py  npupredict.py  pca.py  predict_video.py  recognize_voice.py  test_voice.py
ros2_robot_arm/ros2_ws/install/: local_setup.sh  setup.sh
ros2_robot_arm/ros2_ws/install/dofbot_garbage_yolov5/share/dofbot_garbage_yolov5/: package.sh
ros2_robot_arm/ros2_ws/install/dofbot_garbage_yolov5/share/dofbot_garbage_yolov5/config/: XYT_config.txt
ros2_robot_arm/ros2_ws/install/dofbot_info/share/dofbot_info/: local_setup.sh  package.sh
ros2_robot_arm/ros2_ws/install/dofbot_moveit/lib/dofbot_moveit/: dofbot_server
ros2_robot_arm/ros2_ws/install/dofbot_moveit/share/ament_index/resource_index/parent_prefix_path/: dofbot_moveit
ros2_robot_arm/ros2_ws/install/dofbot_moveit/share/dofbot_moveit/: local_setup.sh  package.sh
ros2_robot_arm/ros2_ws/install/dofbot_moveit/share/dofbot_moveit/rviz/: urdf.rviz
ros2_robot_arm/ros2_ws/install/robot_arm_bringup/share/robot_arm_bringup/: package.sh
ros2_robot_arm/ros2_ws/install/robot_arm_color_stacking/share/robot_arm_color_stacking/: package.sh
ros2_robot_arm/ros2_ws/src/dofbot_garbage_yolov5/tools/: 相机校准.ipynb
ros2_robot_arm/ros2_ws/src/dofbot_garbage_yolov5/tools/.ipynb_checkpoints/: 相机校准-checkpoint.ipynb
ros2_robot_arm/ros2_ws/src/dofbot_moveit/: CMakeLists.txt
